# axum-todo-list

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-46459cdb897da299ef7ecfccf5c05404b3ba987a05693d5065d88666ed58738f.json  query-6abeade6863b9e86771223763f27e1a2bda0ad323cb319f2494f2cbaf1a62b6f.json  query-a2987207c81f8d26e71e2206d77649678a0e1d5d55e3034e01d1c8456aacf781.json  query-d61e8dd119bb1623e39a4c325bb4cf92864c3df4cd9f5903c0e6d3ca65cb1f4e.json  query-e2e6dfe497eff7aa0e82a7b929747a309a286bef632769fb5220d28610f548a2.json  query-fa124e447086efaf29b04b568000f6d01e4e455d698bd53c638bf39bf7ffab84.json
assets/: index.html
migrations/: 20260318194316_create_todos_table.down.sql  20260318194316_create_todos_table.up.sql
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  router.rs  schemas.rs
src/tests/: health.rs  mod.rs  root.rs  todos.rs
